--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.5 <3.0.0'
 
 dependencies:
   flutter:
@@ -16,15 +16,16 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_vector_icons: ^2.0.0
-  google_fonts: ^4.0.3
-  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.2.3
   flutter_rating_bar: ^4.0.1
-  flutter_slidable: ^2.0.0
+  flutter_slidable: ^3.1.1
   flutter_screenutil: ^5.7.0
   hive:
   hive_flutter:
   provider: ^6.0.5
+  google_fonts: ^4.0.3
+  path_provider_android: ^2.1.0
 
 dev_dependencies:
   flutter_test:
